AB#229995: Corrected eyebrow distance on tablet

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/content-feature/_content-feature.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/content-feature/_content-feature.scss
@@ -45,6 +45,7 @@
     }
 
     @include medium {
+      margin: 4rem 0;
       font-size: 5.6rem;
       line-height: 5.6rem;
     }
